Add lunar client launch task